Added routes and changed DB / routes for the new website UI
