# src/models/Product.ts
@@ -3,22 +3,30 @@ import { buildResourceMessages } from "tools/Model.ts";
 
 export interface PrivateProduct {
     id: number;
-    name: string;
+    title: string;
     description: string;
     price: number;
-    app: number;
-    appId: number;
+    category: number;
+    categoryId: number;
+    type: string;
+    typeId: number;
+    available?: boolean;
+    image: string;
     usersCartProducts: number[];
     usersProducts: number[];
 }
 
 export interface PublicProduct {
     id: number;
-    name: string;
+    title: string;
     description: string;
     price: number;
-    app: number;
-    appId: number;
+    category: string;
+    categoryId: number;
+    type: string;
+    typeId: number;
+    available?: boolean;
+    image: string;
 }
 
 export class Product {
@@ -42,11 +50,15 @@ export class Product {
 
         return {
             id: obj.id,
-            name: obj.name,
+            title: obj.title,
             description: obj.description,
             price: obj.price,
-            app: typeof(obj.app) === 'number'? obj.app : obj.app?.id,
-            appId: obj.appId
+            category: typeof(obj.category) === 'string'? obj.category : obj.category?.name,
+            categoryId: obj.categoryId || obj.category?.id,
+            type: typeof(obj.type) === 'string'? obj.type : obj.type?.name,
+            typeId: obj.typeId || obj.type?.id,
+            image: obj.image,
+            available: obj.available
         };
     }
 
@@ -55,11 +67,15 @@ export class Product {
 
         return {
             id: obj.id,
-            name: obj.name,
+            title: obj.title,
             description: obj.description,
             price: obj.price,
-            app: typeof(obj.app) === 'number'? obj.app : obj.app?.id,
-            appId: obj.appId,
+            category: typeof(obj.category) === 'string'? obj.category : obj.category?.name,
+            categoryId: obj.categoryId || obj.category?.id,
+            type: typeof(obj.type) === 'string'? obj.type : obj.type?.name,
+            typeId: obj.typeId || obj.type?.id,
+            image: obj.image,
+            available: obj.available,
             usersCartProducts: obj.usersCartProducts?.map((c: any) => (typeof(c) === 'object')? c.id: c) as number[] || [],
             usersProducts: obj.usersProducts?.map((p: any) => (typeof(p) === 'object')? p.id: p) as number[] || []
         };
