# src/openapi.json
@@ -140,6 +140,25 @@
         }
       }
     },
+    "/user/infos": {
+      "delete": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Delete user informations",
+        "operationId": "deleteUserInfos",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ]
+      }
+    },
     "/cart/": {
       "get": {
         "tags": [
@@ -322,6 +341,12 @@
                 "lastName": {
                   "example": "any"
                 },
+                "email": {
+                  "example": "any"
+                },
+                "phone": {
+                  "example": "any"
+                },
                 "address": {
                   "example": "any"
                 },
@@ -488,6 +513,81 @@
         ]
       }
     },
+    "/store/categories": {
+      "post": {
+        "tags": [
+          "Store"
+        ],
+        "description": "Create a category",
+        "operationId": "createCategory",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "furwazId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ]
+      },
+      "get": {
+        "tags": [
+          "Store"
+        ],
+        "description": "Get all categories",
+        "operationId": "getCategories",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/store/categories/{id}": {
+      "delete": {
+        "tags": [
+          "Store"
+        ],
+        "description": "Remove a category",
+        "operationId": "removeCategory",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ]
+      }
+    },
     "/store/products": {
       "post": {
         "tags": [
@@ -502,7 +602,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "title": {
                   "example": "any"
                 },
                 "description": {
@@ -511,7 +611,13 @@
                 "price": {
                   "example": "any"
                 },
-                "appId": {
+                "categoryId": {
+                  "example": "any"
+                },
+                "typeId": {
+                  "example": "any"
+                },
+                "image": {
                   "example": "any"
                 }
               }
@@ -535,16 +641,23 @@
         ],
         "description": "Get all store products",
         "operationId": "getStoreProducts",
+        "parameters": [
+          {
+            "name": "category",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
           }
-        },
-        "security": [
-          {
-            "ApiKeyAuth": []
-          }
-        ]
+        }
       }
     },
     "/store/products/{id}": {
@@ -572,6 +685,40 @@
             "ApiKeyAuth": []
           }
         ]
+      },
+      "get": {
+        "tags": [
+          "Store"
+        ],
+        "description": "Get a store product",
+        "operationId": "getStoreProduct",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/store/types": {
+      "get": {
+        "tags": [
+          "Store"
+        ],
+        "description": "Get all store products types",
+        "operationId": "getStoreProductsTypes",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
       }
     }
   },
@@ -594,7 +741,7 @@
         }
       }
     },
-    "PrivateProduct": {
+    "PrivateCategory": {
       "type": "object",
       "properties": {
         "id": {
@@ -602,6 +749,98 @@
           "example": 0
         },
         "name": {
+          "type": "string",
+          "example": "string"
+        },
+        "furwazId": {
+          "type": "number",
+          "example": 0
+        }
+      }
+    },
+    "PublicCategory": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 0
+        },
+        "name": {
+          "type": "string",
+          "example": "string"
+        },
+        "furwazId": {
+          "type": "number",
+          "example": 0
+        }
+      }
+    },
+    "PrivateCheckout": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 0
+        },
+        "userId": {
+          "type": "number",
+          "example": 0
+        },
+        "intentId": {
+          "type": "string",
+          "example": "string"
+        },
+        "firstName": {
+          "type": "string",
+          "example": "string"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "string"
+        },
+        "email": {
+          "type": "string",
+          "example": "string"
+        },
+        "phone": {
+          "type": "string",
+          "example": "string"
+        },
+        "address": {
+          "type": "string",
+          "example": "string"
+        },
+        "city": {
+          "type": "string",
+          "example": "string"
+        },
+        "country": {
+          "type": "string",
+          "example": "string"
+        },
+        "postalCode": {
+          "type": "string",
+          "example": "string"
+        },
+        "amount": {
+          "type": "number",
+          "example": 0
+        },
+        "products": {},
+        "status": {
+          "type": "string",
+          "example": "string"
+        }
+      }
+    },
+    "PrivateProduct": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 0
+        },
+        "title": {
           "type": "string",
           "example": "string"
         },
@@ -613,13 +852,29 @@
           "type": "number",
           "example": 0
         },
-        "app": {
+        "category": {
           "type": "number",
           "example": 0
         },
-        "appId": {
+        "categoryId": {
           "type": "number",
           "example": 0
+        },
+        "type": {
+          "type": "string",
+          "example": "string"
+        },
+        "typeId": {
+          "type": "number",
+          "example": 0
+        },
+        "available": {
+          "type": "boolean",
+          "example": true
+        },
+        "image": {
+          "type": "string",
+          "example": "string"
         },
         "usersCartProducts": {
           "type": "array",
@@ -648,7 +903,7 @@
           "type": "number",
           "example": 0
         },
-        "name": {
+        "title": {
           "type": "string",
           "example": "string"
         },
@@ -660,13 +915,55 @@
           "type": "number",
           "example": 0
         },
-        "app": {
+        "category": {
+          "type": "string",
+          "example": "string"
+        },
+        "categoryId": {
           "type": "number",
           "example": 0
         },
-        "appId": {
+        "type": {
+          "type": "string",
+          "example": "string"
+        },
+        "typeId": {
           "type": "number",
           "example": 0
+        },
+        "available": {
+          "type": "boolean",
+          "example": true
+        },
+        "image": {
+          "type": "string",
+          "example": "string"
+        }
+      }
+    },
+    "PrivateType": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 0
+        },
+        "name": {
+          "type": "string",
+          "example": "string"
+        }
+      }
+    },
+    "PublicType": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 0
+        },
+        "name": {
+          "type": "string",
+          "example": "string"
         }
       }
     },
@@ -681,32 +978,37 @@
           "type": "number",
           "example": 0
         },
-        "products": {
-          "type": "array",
-          "example": [
-            0
-          ],
-          "items": {
-            "type": "number"
-          }
+        "firstName": {
+          "type": "string",
+          "example": "string"
         },
-        "cart": {
-          "type": "array",
-          "example": [
-            0
-          ],
-          "items": {
-            "type": "number"
-          }
+        "lastName": {
+          "type": "string",
+          "example": "string"
         },
-        "checkouts": {
-          "type": "array",
-          "example": [
-            0
-          ],
-          "items": {
-            "type": "number"
-          }
+        "email": {
+          "type": "string",
+          "example": "string"
+        },
+        "phone": {
+          "type": "string",
+          "example": "string"
+        },
+        "address": {
+          "type": "string",
+          "example": "string"
+        },
+        "city": {
+          "type": "string",
+          "example": "string"
+        },
+        "postalCode": {
+          "type": "string",
+          "example": "string"
+        },
+        "country": {
+          "type": "string",
+          "example": "string"
         }
       }
     },
